Mise en place du html, css et js du code pour la modal

--- a/photographer.html
+++ b/photographer.html
@@ -15,7 +15,7 @@
     <header>
       <img src="assets/images/logo.png" class="logo" />
     </header>
-    <main id="main">
+    <main id="main" aria-hidden="false">
       <div class="photograph-header">
         <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
       </div>
@@ -23,18 +23,27 @@
 
       </div>
     </main>
-    <div id="contact_modal">
+    <div id="contact_modal" aria-hidden="true" role="dialog">
 			<div class="modal">
 				<header>
           <h2>Contactez-moi</h2>
-          <img src="assets/icons/close.svg" onclick="closeModal()" />
+          <img class="close-modal" src="assets/icons/close.svg" onclick="closeModal()" />
         </header>
-				<form>
+				<form id="contactForm">
 					<div>
-						<label>Prénom</label>
-						<input />
+						<label for="prenom">Prénom</label>
+						<input type="text" id="prenom" name="prenom">
+
+						<label for="nom">Nom</label>
+						<input type="text" id="nom" name="nom">
+
+						<label for="email">Email</label>
+						<input type="mail" id="email" name="email">
+            
+						<label for="message">Votre message</label>
+						<textarea id="message" name="message"></textarea>
 					</div>
-          <button class="contact_button">Envoyer</button>
+          <button class="contact_button" type="submit">Envoyer</button>
 				</form>
 			</div>
 		</div>
