--- a/photographer.html
+++ b/photographer.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -20,7 +21,20 @@
         <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
       </div>
       <div class="photograph-media">
-
+      </div>
+      <div>
+        <ul class="carrousel" aria-label="Carrousel de photos">
+          <div role="button" class="controls controls-left">
+            <span class="img prev-image">
+              <i aria-hidden="true" class="fa-solid fa-chevron-left"></i>
+            </span>
+          </div>
+          <div role="button" class="controls controls-right">
+            <span class="img next-image">
+              <i aria-hidden="true" class="fa-solid fa-chevron-right"></i>
+            </span>
+          </div>
+        </ul>
       </div>
     </main>
     <div id="contact_modal" aria-hidden="true" role="dialog">
